Task #532: Changed find your audience

--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_find_your_audience.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_find_your_audience.default.yml
@@ -68,10 +68,16 @@ bundle: block_find_your_audience
 mode: default
 content:
   field_genres:
-    weight: 4
-    settings: {  }
+    type: entity_reference_paragraphs
+    weight: 6
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
-    type: options_buttons
     region: content
   field_networks:
     type: entity_reference_paragraphs
