--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_find_your_audience.field_networks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_find_your_audience.field_networks.yml
@@ -1,4 +1,4 @@
-uuid: 342f1fde-a690-4e2d-9a55-6dbb1c3a7139
+uuid: 222220bb-7329-4ca1-89f6-5ec79ec6f049
 langcode: en
 status: true
 dependencies:
@@ -25,318 +25,327 @@ settings:
       networks: networks
     target_bundles_drag_drop:
       audience_statistics_item:
-        weight: 106
-        enabled: false
-      background_image:
-        weight: 107
-        enabled: false
-      block_audience_product_top:
-        weight: 108
-        enabled: false
-      block_audience_quote:
         weight: 109
         enabled: false
-      block_audience_reach:
+      background_image:
         weight: 110
         enabled: false
-      block_audience_statistics:
+      block_audience_product_top:
         weight: 111
         enabled: false
-      block_audience_statistics_b:
+      block_audience_quote:
         weight: 112
         enabled: false
-      block_audience_top_programming:
+      block_audience_reach:
         weight: 113
         enabled: false
-      block_blog_post_b:
+      block_audience_statistics:
         weight: 114
         enabled: false
-      block_core_product_message:
+      block_audience_statistics_b:
         weight: 115
         enabled: false
-      block_double_image:
+      block_audience_top_programming:
         weight: 116
         enabled: false
-      block_download_file_a:
+      block_blog_post_b:
         weight: 117
         enabled: false
-      block_download_file_b:
+      block_core_product_message:
         weight: 118
         enabled: false
-      block_find_your_audience:
+      block_double_image:
         weight: 119
         enabled: false
-      block_glossary_a:
+      block_download_file_a:
         weight: 120
         enabled: false
-      block_glossary_b:
+      block_download_file_b:
         weight: 121
         enabled: false
-      block_hero_quaternary:
+      block_filter_network_content:
         weight: 122
         enabled: false
-      block_hero_quinary:
+      block_filter_show_content:
         weight: 123
         enabled: false
-      block_image_list:
+      block_find_your_audience:
         weight: 124
         enabled: false
-      block_image_with_content_b:
+      block_glossary_a:
         weight: 125
         enabled: false
-      block_image_with_content_c:
+      block_glossary_b:
         weight: 126
         enabled: false
-      block_infographic:
+      block_hero_quaternary:
         weight: 127
         enabled: false
-      block_large_video:
+      block_hero_quinary:
         weight: 128
         enabled: false
-      block_main_product_nav:
+      block_image_list:
         weight: 129
         enabled: false
-      block_map_tertiary:
+      block_image_with_content_b:
         weight: 130
         enabled: false
-      block_multiple_images:
+      block_image_with_content_c:
         weight: 131
         enabled: false
-      block_pdf:
+      block_infographic:
         weight: 132
         enabled: false
-      block_persona_selector_banner:
+      block_large_video:
         weight: 133
         enabled: false
-      block_product_list:
+      block_main_product_nav:
         weight: 134
         enabled: false
-      block_show_detail:
+      block_map_tertiary:
         weight: 135
         enabled: false
-      block_success_stories_a:
+      block_multiple_images:
         weight: 136
         enabled: false
-      block_success_stories_b:
+      block_pdf:
         weight: 137
         enabled: false
-      block_success_story_highlight:
+      block_persona_selector_banner:
         weight: 138
         enabled: false
-      block_success_story_impact:
+      block_product_list:
         weight: 139
         enabled: false
-      block_success_story_post:
+      block_show_detail:
         weight: 140
         enabled: false
-      block_target_audience:
+      block_success_stories_a:
         weight: 141
         enabled: false
-      block_triple_content:
+      block_success_stories_b:
         weight: 142
         enabled: false
-      block_twitter_feed:
+      block_success_story_highlight:
         weight: 143
         enabled: false
-      block_video_with_call_to_actions:
+      block_success_story_impact:
         weight: 144
         enabled: false
-      block_video_with_content_b:
+      block_success_story_post:
         weight: 145
         enabled: false
-      block_video_with_content_c:
+      block_target_audience:
         weight: 146
         enabled: false
-      blockarticleteaser:
+      block_triple_content:
         weight: 147
         enabled: false
-      blockaudiofragment:
+      block_twitter_feed:
         weight: 148
         enabled: false
-      blockblogpost:
+      block_video_with_call_to_actions:
         weight: 149
         enabled: false
-      blockbutton:
+      block_video_with_content_b:
         weight: 150
         enabled: false
-      blockfiltercontent:
+      block_video_with_content_c:
         weight: 151
         enabled: false
-      blockheromain:
+      blockarticleteaser:
         weight: 152
         enabled: false
-      blockherosecondary:
+      blockaudiofragment:
         weight: 153
         enabled: false
-      blockherotertiary:
+      blockblogpost:
         weight: 154
         enabled: false
-      blockhowtoadvertise:
+      blockbutton:
         weight: 155
         enabled: false
-      blockimagecalltoactions:
+      blockfiltercontent:
         weight: 156
         enabled: false
-      blockimagecarousel:
+      blockheromain:
         weight: 157
         enabled: false
-      blockimagewithcontent:
+      blockherosecondary:
         weight: 158
         enabled: false
-      blockinfo:
+      blockherotertiary:
         weight: 159
         enabled: false
-      blocklatest:
+      blockhowtoadvertise:
         weight: 160
         enabled: false
-      blockmap:
+      blockimagecalltoactions:
         weight: 161
         enabled: false
-      blockmapsecondary:
+      blockimagecarousel:
         weight: 162
         enabled: false
-      blockmarketmap:
+      blockimagewithcontent:
         weight: 163
         enabled: false
-      blockmore:
+      blockinfo:
         weight: 164
         enabled: false
-      blocknetworkoverview:
+      blocklatest:
         weight: 165
         enabled: false
-      blockpagenotfound:
+      blockmap:
         weight: 166
         enabled: false
-      blockpathtopurchase:
+      blockmapsecondary:
         weight: 167
         enabled: false
-      blockpersonaselector:
+      blockmarketmap:
         weight: 168
         enabled: false
-      blockprogrammodule:
+      blockmore:
         weight: 169
         enabled: false
-      blockquote:
+      blocknetworkoverview:
         weight: 170
         enabled: false
-      blockquotesecondary:
+      blockpagenotfound:
         weight: 171
         enabled: false
-      blocksmallheading:
+      blockpathtopurchase:
         weight: 172
         enabled: false
-      blocksmallimage:
+      blockpersonaselector:
         weight: 173
         enabled: false
-      blocksmallinfo:
+      blockprogrammodule:
         weight: 174
         enabled: false
-      blockstoryinfoimages:
+      blockquote:
         weight: 175
         enabled: false
-      blocktext:
+      blockquotesecondary:
         weight: 176
         enabled: false
-      blog_post_item:
+      blocksmallheading:
         weight: 177
         enabled: false
-      broadcastschedule:
+      blocksmallimage:
         weight: 178
         enabled: false
-      calltoaction:
+      blocksmallinfo:
         weight: 179
         enabled: false
-      channel:
+      blockstoryinfoimages:
         weight: 180
         enabled: false
-      core_product_message_item:
+      blocktext:
         weight: 181
         enabled: false
-      device:
+      blog_post_item:
         weight: 182
         enabled: false
-      glossary_a_item:
+      broadcastschedule:
         weight: 183
         enabled: false
-      heading:
+      calltoaction:
         weight: 184
         enabled: false
-      image:
+      channel:
         weight: 185
         enabled: false
-      image_with_video_and_text:
+      core_product_message_item:
         weight: 186
         enabled: false
-      label_and_value:
+      device:
         weight: 187
         enabled: false
-      link:
+      glossary_a_item:
         weight: 188
         enabled: false
-      map_tertiary_data:
+      heading:
         weight: 189
         enabled: false
-      networkoverviewitem:
+      image:
         weight: 190
+        enabled: false
+      image_with_video_and_text:
+        weight: 191
+        enabled: false
+      label_and_value:
+        weight: 192
+        enabled: false
+      link:
+        weight: 193
+        enabled: false
+      map_tertiary_data:
+        weight: 194
+        enabled: false
+      networkoverviewitem:
+        weight: 195
         enabled: false
       networks:
         enabled: true
-        weight: 191
-      personas:
-        weight: 192
-        enabled: false
-      poster:
-        weight: 193
-        enabled: false
-      program:
-        weight: 194
-        enabled: false
-      showmetric:
-        weight: 195
-        enabled: false
-      skills:
         weight: 196
-        enabled: false
-      slide:
+      personas:
         weight: 197
         enabled: false
-      slide_item:
+      poster:
         weight: 198
         enabled: false
-      slideheromain:
+      program:
         weight: 199
         enabled: false
-      stat:
+      showmetric:
         weight: 200
         enabled: false
-      statistic:
+      skills:
         weight: 201
         enabled: false
-      step:
+      slide:
         weight: 202
         enabled: false
-      stepmap:
+      slide_item:
         weight: 203
         enabled: false
-      steppurchase:
+      slideheromain:
         weight: 204
         enabled: false
-      stories:
+      spacer:
         weight: 205
         enabled: false
-      styles:
+      stat:
         weight: 206
         enabled: false
-      success_story_statistic:
+      statistic:
         weight: 207
         enabled: false
-      text_and_link:
+      step:
         weight: 208
         enabled: false
-      top_picks:
+      stepmap:
         weight: 209
         enabled: false
-      triple_content_item:
+      steppurchase:
         weight: 210
+        enabled: false
+      stories:
+        weight: 211
+        enabled: false
+      styles:
+        weight: 212
+        enabled: false
+      success_story_statistic:
+        weight: 213
+        enabled: false
+      text_and_link:
+        weight: 214
+        enabled: false
+      top_picks:
+        weight: 215
+        enabled: false
+      triple_content_item:
+        weight: 216
         enabled: false
 field_type: entity_reference_revisions
