--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.networks.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.networks.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.networks.field_main_heading
+    - field.field.paragraph.networks.field_network_items
     - field.field.paragraph.networks.field_paragraph
     - paragraphs.paragraphs_type.networks
   module:
@@ -20,6 +21,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_network_items:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_paragraph:
     weight: 1
