--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_glossary_a.field_glossary_a_items.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_glossary_a.field_glossary_a_items.yml
@@ -1,231 +1,25 @@
-uuid: 44d30d71-358b-4ce1-bae8-0e5078f1a161
+uuid: 77ce1af3-3780-4579-ae95-335b157abe0a
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_glossary_a_items
     - paragraphs.paragraphs_type.block_glossary_a
-    - paragraphs.paragraphs_type.glossary_a_item
-  module:
-    - entity_reference_revisions
 id: paragraph.block_glossary_a.field_glossary_a_items
 field_name: field_glossary_a_items
 entity_type: paragraph
 bundle: block_glossary_a
 label: Items
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:paragraph'
+  handler: 'default:advertising_item'
   handler_settings:
-    target_bundles:
-      glossary_a_item: glossary_a_item
-    target_bundles_drag_drop:
-      audience_statistics_item:
-        weight: 69
-        enabled: false
-      background_image:
-        weight: 70
-        enabled: false
-      block_audience_reach:
-        weight: 71
-        enabled: false
-      block_audience_statistics:
-        weight: 72
-        enabled: false
-      block_core_product_message:
-        weight: 73
-        enabled: false
-      block_download_file_a:
-        weight: 74
-        enabled: false
-      block_glossary_a:
-        weight: 75
-        enabled: false
-      block_hero_quaternary:
-        weight: 76
-        enabled: false
-      block_infographic:
-        weight: 77
-        enabled: false
-      block_map_tertiary:
-        weight: 78
-        enabled: false
-      block_pdf:
-        weight: 79
-        enabled: false
-      block_target_audience:
-        weight: 80
-        enabled: false
-      block_video_with_call_to_actions:
-        weight: 81
-        enabled: false
-      block_video_with_content_b:
-        weight: 82
-        enabled: false
-      blockarticleteaser:
-        weight: 83
-        enabled: false
-      blockaudiofragment:
-        weight: 84
-        enabled: false
-      blockblogpost:
-        weight: 85
-        enabled: false
-      blockbutton:
-        weight: 86
-        enabled: false
-      blockfiltercontent:
-        weight: 87
-        enabled: false
-      blockheromain:
-        weight: 88
-        enabled: false
-      blockherosecondary:
-        weight: 89
-        enabled: false
-      blockherotertiary:
-        weight: 90
-        enabled: false
-      blockhowtoadvertise:
-        weight: 91
-        enabled: false
-      blockimagecalltoactions:
-        weight: 92
-        enabled: false
-      blockimagecarousel:
-        weight: 93
-        enabled: false
-      blockimagewithcontent:
-        weight: 94
-        enabled: false
-      blockinfo:
-        weight: 95
-        enabled: false
-      blocklatest:
-        weight: 96
-        enabled: false
-      blockmap:
-        weight: 97
-        enabled: false
-      blockmapsecondary:
-        weight: 98
-        enabled: false
-      blockmarketmap:
-        weight: 99
-        enabled: false
-      blockmore:
-        weight: 100
-        enabled: false
-      blocknetworkoverview:
-        weight: 101
-        enabled: false
-      blockpagenotfound:
-        weight: 102
-        enabled: false
-      blockpathtopurchase:
-        weight: 103
-        enabled: false
-      blockpersonaselector:
-        weight: 104
-        enabled: false
-      blockprogrammodule:
-        weight: 105
-        enabled: false
-      blockquote:
-        weight: 106
-        enabled: false
-      blockquotesecondary:
-        weight: 107
-        enabled: false
-      blocksmallheading:
-        weight: 108
-        enabled: false
-      blocksmallimage:
-        weight: 109
-        enabled: false
-      blocksmallinfo:
-        weight: 110
-        enabled: false
-      blockstoryinfoimages:
-        weight: 111
-        enabled: false
-      blocktext:
-        weight: 112
-        enabled: false
-      broadcastschedule:
-        weight: 113
-        enabled: false
-      calltoaction:
-        weight: 114
-        enabled: false
-      channel:
-        weight: 115
-        enabled: false
-      core_product_message_item:
-        weight: 116
-        enabled: false
-      device:
-        weight: 117
-        enabled: false
-      glossary_a_item:
-        enabled: true
-        weight: 118
-      heading:
-        weight: 119
-        enabled: false
-      image:
-        weight: 120
-        enabled: false
-      link:
-        weight: 121
-        enabled: false
-      map_tertiary_data:
-        weight: 122
-        enabled: false
-      networkoverviewitem:
-        weight: 123
-        enabled: false
-      personas:
-        weight: 124
-        enabled: false
-      poster:
-        weight: 125
-        enabled: false
-      program:
-        weight: 126
-        enabled: false
-      showmetric:
-        weight: 127
-        enabled: false
-      slide:
-        weight: 128
-        enabled: false
-      slideheromain:
-        weight: 129
-        enabled: false
-      stat:
-        weight: 130
-        enabled: false
-      statistic:
-        weight: 131
-        enabled: false
-      step:
-        weight: 132
-        enabled: false
-      stepmap:
-        weight: 133
-        enabled: false
-      steppurchase:
-        weight: 134
-        enabled: false
-      stories:
-        weight: 135
-        enabled: false
-      styles:
-        weight: 136
-        enabled: false
-field_type: entity_reference_revisions
+    target_bundles: null
+    sort:
+      field: _none
+    auto_create: false
+field_type: entity_reference
