--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_video_with_content_b.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.video_internal
+    - entity_browser.browser.video
     - field.field.paragraph.block_video_with_content_b.field_alignment
     - field.field.paragraph.block_video_with_content_b.field_link
     - field.field.paragraph.block_video_with_content_b.field_new_heading
@@ -147,7 +147,7 @@ content:
   field_video:
     weight: 6
     settings:
-      entity_browser: video_internal
+      entity_browser: video
       field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
