--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_video_with_content_b.field_video.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_video_with_content_b.field_video.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_video
+    - media_entity.bundle.video_external
     - media_entity.bundle.video_local
     - media_entity.bundle.video_url
     - paragraphs.paragraphs_type.block_video_with_content_b
@@ -22,6 +23,7 @@ settings:
   handler_settings:
     target_bundles:
       video_url: video_url
+      video_external: video_external
       video_local: video_local
     sort:
       field: _none
