Task #506: Removed required from main content

--- a/source/drupal/var/drupal-config/sync/field.field.node.article.field_content.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.article.field_content.yml
@@ -13,13 +13,14 @@ entity_type: node
 bundle: article
 label: 'Main content'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
     basic_html: basic_html
+    bold_html: '0'
     restricted_html: '0'
     full_html: '0'
     plain_text: '0'
