--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.product_page.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.product_page.default.yml
@@ -9,10 +9,12 @@ dependencies:
     - field.field.node.product_page.field_header_theme
     - field.field.node.product_page.field_hide_contact_button
     - field.field.node.product_page.field_image
+    - field.field.node.product_page.field_metatags
     - node.type.product_page
   module:
     - entity_reference_revisions
     - image
+    - metatag
     - options
     - text
     - user
@@ -71,6 +73,13 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_metatags:
+    weight: 107
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   links:
     weight: 100
