--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_glossary_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_glossary_b.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.block_glossary_b.field_all_categories_label
     - field.field.paragraph.block_glossary_b.field_landing_category
     - field.field.paragraph.block_glossary_b.field_main_heading
     - field.field.paragraph.block_glossary_b.field_paragraph
@@ -18,6 +19,14 @@ targetEntityType: paragraph
 bundle: block_glossary_b
 mode: default
 content:
+  field_all_categories_label:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_landing_category:
     weight: 0
     label: above
