--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_audience_product_top.field_product.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_audience_product_top.field_product.yml
@@ -1,26 +1,26 @@
-uuid: 381a8f8d-0129-40d4-a0d7-aa6fa9e384cb
+uuid: 8b9423ef-e08b-4afb-a5a3-94d5a3e84e25
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_article
-    - node.type.article
+    - field.storage.paragraph.field_product
+    - node.type.product_page
     - paragraphs.paragraphs_type.block_audience_product_top
-id: paragraph.block_audience_product_top.field_article
-field_name: field_article
+id: paragraph.block_audience_product_top.field_product
+field_name: field_product
 entity_type: paragraph
 bundle: block_audience_product_top
-label: 'Top product'
+label: Product
 description: ''
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:node'
   handler_settings:
     target_bundles:
-      article: article
+      product_page: product_page
     sort:
       field: _none
     auto_create: false
