--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_audience_product_top.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_audience_product_top.default.yml
@@ -3,10 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.block_audience_product_top.field_article
     - field.field.paragraph.block_audience_product_top.field_new_heading
     - field.field.paragraph.block_audience_product_top.field_paragraph
     - field.field.paragraph.block_audience_product_top.field_paragraph_image
+    - field.field.paragraph.block_audience_product_top.field_product
     - field.field.paragraph.block_audience_product_top.field_scroll_id
     - field.field.paragraph.block_audience_product_top.field_styles
     - paragraphs.paragraphs_type.block_audience_product_top
@@ -18,14 +18,6 @@ targetEntityType: paragraph
 bundle: block_audience_product_top
 mode: default
 content:
-  field_article:
-    weight: 0
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_new_heading:
     weight: 1
     label: above
@@ -50,6 +42,14 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_product:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   field_scroll_id: true
