Created Success Story CT and single page

--- a/source/drupal/var/drupal-config/sync/user.role.anonymous.yml
+++ b/source/drupal/var/drupal-config/sync/user.role.anonymous.yml
@@ -14,8 +14,10 @@ permissions:
   - 'access site-wide contact form'
   - 'restful get spectrum_rest_article_v1'
   - 'restful get spectrum_rest_page_v1'
+  - 'restful get spectrum_rest_search_networks_v1'
   - 'restful get spectrum_rest_searcharticles_v1'
   - 'restful get spectrum_rest_searchpages_v1'
+  - 'restful get spectrum_rest_searchshows_v1'
   - 'restful get spin_rest_init_v1'
   - 'restful get spin_rest_view_counter_v1'
   - 'restful post spectrum_rest_contact_v1'
