--- a/source/drupal/var/drupal-config/sync/pathauto.pattern.page.yml
+++ b/source/drupal/var/drupal-config/sync/pathauto.pattern.page.yml
@@ -9,15 +9,16 @@ label: Page
 type: 'canonical_entities:node'
 pattern: '[node:title]'
 selection_criteria:
-  7f1ccb2a-488e-475e-8a7c-400f94d3969d:
+  972ada35-6f5f-464e-9c51-164760758fa8:
     id: node_type
     bundles:
       page: page
       product_page: product_page
+      success_story: success_story
     negate: false
     context_mapping:
       node: node
-    uuid: 7f1ccb2a-488e-475e-8a7c-400f94d3969d
+    uuid: 972ada35-6f5f-464e-9c51-164760758fa8
 selection_logic: and
 weight: -5
 relationships: {  }
