--- a/source/drupal/var/drupal-config/sync/user.role.authenticated.yml
+++ b/source/drupal/var/drupal-config/sync/user.role.authenticated.yml
@@ -16,8 +16,10 @@ permissions:
   - 'post comments'
   - 'restful get spectrum_rest_article_v1'
   - 'restful get spectrum_rest_page_v1'
+  - 'restful get spectrum_rest_search_networks_v1'
   - 'restful get spectrum_rest_searcharticles_v1'
   - 'restful get spectrum_rest_searchpages_v1'
+  - 'restful get spectrum_rest_searchshows_v1'
   - 'restful get spectrum_rest_view_counter_v1'
   - 'restful get spin_rest_init_v1'
   - 'restful get spin_rest_view_counter_v1'
